[gd_scene load_steps=7 format=3 uid="uid://ldnistublqrq"]

[ext_resource type="Script" path="res://scripts/doorfight2choice.gd" id="1_bv5ox"]
[ext_resource type="Texture2D" uid="uid://bvpce48rytcm2" path="res://assets/bg.png" id="2_7tas3"]
[ext_resource type="PackedScene" uid="uid://dij0s1q66u46b" path="res://scenes/stripedoor.tscn" id="3_q6s2o"]
[ext_resource type="Texture2D" uid="uid://cvyiiftk8jb3m" path="res://assets/fightdoorbutton.png" id="4_eqwdk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cppea"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cf7v"]
bg_color = Color(0, 1, 0, 1)

[node name="doorfight" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -720.0
offset_bottom = -1280.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bv5ox")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 720.0
offset_bottom = 1280.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7tas3")

[node name="questionlabel" type="Label" parent="."]
layout_mode = 0
offset_left = 219.0
offset_top = 376.0
offset_right = 643.0
offset_bottom = 452.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "question"

[node name="Node2D" parent="." instance=ExtResource("3_q6s2o")]
position = Vector2(271, 106)

[node name="chancelabel" type="Label" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 487.0
offset_right = 457.0
offset_bottom = 545.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "chance = 3/3"

[node name="doorprogressbar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 251.0
offset_top = 40.0
offset_right = 455.0
offset_bottom = 75.0
theme_override_styles/background = SubResource("StyleBoxFlat_cppea")
theme_override_styles/fill = SubResource("StyleBoxFlat_0cf7v")
max_value = 2.0
value = 2.0
show_percentage = false

[node name="playerprogressbar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 885.0
offset_right = 550.0
offset_bottom = 921.0
theme_override_styles/background = SubResource("StyleBoxFlat_cppea")
theme_override_styles/fill = SubResource("StyleBoxFlat_0cf7v")
value = 100.0
show_percentage = false

[node name="Button1" type="Button" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 573.0
offset_right = 324.0
offset_bottom = 837.0
icon = ExtResource("4_eqwdk")

[node name="Label1" type="Label" parent="Button1"]
layout_mode = 0
offset_left = 113.0
offset_top = 84.0
offset_right = 153.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "1"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 358.0
offset_top = 575.0
offset_right = 622.0
offset_bottom = 839.0
icon = ExtResource("4_eqwdk")

[node name="Label2" type="Label" parent="Button2"]
layout_mode = 0
offset_left = 112.0
offset_top = 63.0
offset_right = 152.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 70
text = "2"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
